added a only available for pc

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fighting Game</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dyrzp2wi6/image/upload/v1708465793/images-removebg-preview_fmoaav.png">
+    <link rel="stylesheet" href="style.css">
     <style>
       *{
         box-sizing: border-box;
@@ -15,6 +17,7 @@
 
 </head>
 <body>
+  <h1 class="this">This Game Is Available For PC Only.</h1>
   <!-- red container  -->
 
     <div style="position: relative; display: inline-block;">
@@ -49,7 +52,7 @@
         
         <canvas>
 
-        </canvas>
+        </canva>
 
     </div>
 
